--- a/src/apps/frontend/index.html
+++ b/src/apps/frontend/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
-<html lang='en'>
-<head>
-  <base href='/'>
-  <meta charset='utf-8'>
-  <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <title>Jalan Technologies | FRM Boilerplate</title>
-</head>
-<body>
-<div id='app'></div>
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <base href="/" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Jalan Technologies | FRM Boilerplate</title>
+  </head>
+  <body>
+    <div id="app"></div>
+  </body>
 </html>
